[package]
name = "doubly_linked_list"
version = "0.1.0"
edition = "2021"
authors = ["Tim McNamara <tim@mcnamara.nz>"]

[[bin]]
name = "raw_ptr"
path = "src/raw_ptr.rs"

[[bin]]
name = "rc"
path = "src/rc.rs"

[[bin]]
name = "weak"
path = "src/weak_ref.rs"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
